--- a/src/resources/apps/fr/style/form-runner-summary.css
+++ b/src/resources/apps/fr/style/form-runner-summary.css
@@ -31,19 +31,24 @@
 .fr-summary-table th { background-color: #f8f8f8 }
 .fr-summary-table td, .fr-summary-table th { padding: 4px }
 
+.fr-summary-table-div {
+    overflow-x: auto;
+}
+
 /* Mainly to prevent dates to wrap */
 .fr-summary-table td { white-space: nowrap }
 
 .fr-summary-table {
-    margin: 1px 0 0 1px;
+    margin: 1px;/* should't have to do this, but FF3 behaves funny otherwise */
     border-collapse: collapse;
-    width: 100%
+    width: 99.99%/* 100% causes FF 3 to still use a scrollbar; why? */
 }
 
 .fr-summary-welcome-message { display: block; margin-top: .5em; margin-bottom: .5em; clear: both }
 .fr-summary-search-count {  display: block; margin-top: 1em; margin-bottom: 1em }
 
 .fr-summary-search { display: block; margin-bottom: .5em }
+.fr-summary-search-items { display: block; clear: both }
 .fr-summary-search-item { float: left; margin-right: .5em }
 .fr-summary-search-item select { width: 100% } 
 
